tests/miniJava/neg/006843_mutation.MiniJava
class true { public static void Main ( String [ ] java ) { { } } }
